--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,9 +1,12 @@
 /* Estilo general del contenedor principal */
 .faq-container {
-  background-image: url('https://res.cloudinary.com/dbfrdhebo/image/upload/v1744553460/haul-back_lgt1fs.jpg'); /* Fondo con patrón repetido */
+  background-image: url('https://res.cloudinary.com/dbfrdhebo/image/upload/v1744553460/haul-back_lgt1fs.jpg');
+  /* Fondo con patrón repetido */
   background-size: 150px auto; /* Tamaño del fondo */
   background-repeat: repeat; /* Repite el fondo */
   background-position: top left; /* Posición inicial del fondo */
+  /* Centra el fondo */
+  background-attachment: fixed; /* Efecto parallax: fija el fondo mientras se hace scroll */
   min-height: 100vh; /* Altura mínima para ocupar toda la pantalla */
   display: flex; /* Layout flexible */
   flex-direction: column; /* Organiza los elementos en columna */
